--- a/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -154,7 +154,7 @@
 </div> <!-- Weißer Hintergrundcontainer -->
 
 {% set entry = craft.entries.section('projekte').slug('dorfpate-werden').one() %}
-<div class="container-fluid no-padding"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
+<div class="container-fluid"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
   <div class="row">
     <div class="col-md-1">  </div>
     <div class="col-md-2">   <img class="img-fluid mx-auto d-block" src="{{ entry.bild.inReverse().one().url }}" style="max-height: 150px; padding-bottom: 10px;"> </div>
