--- a/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -127,7 +127,7 @@
 
 {% set entry = craft.entries.section('projekte').slug('waldpate-werden').one() %}
 
-<div class="container-fluid no-padding"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
+<div class="container-fluid"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
   <div class="row">
     <div class="col-md-1">  </div>
     <div class="col-md-3">   <img  style="position: relative; top: 50%; transform: translateY(-50%);" class="img-fluid mx-auto d-block" src="{% if entry.bild.inReverse().one() is not null %}  {{ entry.bild.inReverse().one().getUrl() }}  {% endif %}"> </div>
