--- a/craft_sicherungWebsite/templates/blog/index.html
+++ b/craft_sicherungWebsite/templates/blog/index.html
@@ -12,6 +12,9 @@
   p {
     margin-bottom: 0;
   }
+  a:hover {
+    text-decoration: none;
+  }
 </style>
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; position: relative;">
@@ -45,18 +48,18 @@
         <img class="img-fluid" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}" alt="blogbild" style="padding-bottom: 1rem;">
         </a>
         <div id="info"> Veröffentlicht am {{ entry.postDate | date("d M Y") }} - {%if entry.blogKategorie.one() is not null %} in <a href="{{ entry.blogKategorie.one().url }}">{{ entry.blogKategorie.one().title }}</a> {% endif %}
-        {%if entry.blogKategorie.inReverse().one() is not null %} und <a href="{{ entry.blogKategorie.inReverse().one().url }}">{{ entry.blogKategorie.inReverse().one().title }}</a> {% endif %}</div>
+        {%if entry.blogKategorie.inReverse().one().title != entry.blogKategorie.one().title %} und <a href="{{ entry.blogKategorie.inReverse().one().url }}">{{ entry.blogKategorie.inReverse().one().title }}</a> {% endif %}</div>
         <!-- Mit der oberen Zeile wird die Kategorie des Artikels abgerufen und angezeigt und sofort klickbar -->
         <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}">
         <h2 style="padding-bottom: 0;"> {{ entry.title}}</h2>
         </a>
         <div id="copy" style="padding-top: 0; padding-bottom: 5rem;"> {{ entry.anleser }}
-        <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}"> Weiterlesen</a>
+        <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }} "> Weiterlesen</a>
         </div>
         {% set counter = counter + 1 %}
         {% endfor %}
         <div id="div1">  </div>
-        <button id="Laden" type="button" class="btn btn-primary mx-auto d-block" onclick="mehrLadenAjax()"> Weitere Beiträge laden</button>
+        <button id="Laden" type="button" class="btn btn-primary mx-auto d-block" onclick="mehrLadenAjax()" style="margin-bottom: 2rem;"> Weitere Beiträge laden</button>
       </div> <!-- Kurzansicht der Einträge mit Bild -->
 
 
@@ -75,9 +78,10 @@ function mehrLadenAjax() {
   if (eintraege.length > 3) { durchlaeufe = 3;  } else { durchlaeufe = eintraege.length }
 
   for (i = 0; i < durchlaeufe; i++) {
-    $("#div1").append("<img class=\"img-fluid\" style=\"padding-bottom: 1rem;\" src=" + eintraege[i].bild + "> </img>");
+    var link = "https://aufbau-website.de/craft/web/blog/" + eintraege[i].slug;
+    $("#div1").append("<a href=" + link + "> <img class=\"img-fluid\" style=\"padding-bottom: 1rem;\" src=" + eintraege[i].bild + "> </img> </a>");
     $("#div1").append("<div id=\"info\"> Veröffentlicht am " + eintraege[i].datum + " - in <a href=\"" + eintraege[i].kategorieUrl + "\">" + eintraege[i].kategorie + "</a></div>");
-    $("#div1").append("<h2 style=\"padding-bottom: 0;\">" + eintraege[i].title + "</h2>");
+    $("#div1").append("<a href=" + link + "> <h2 style=\"padding-bottom: 0;\">" + eintraege[i].title + "</h2> </a>");
     $("#div1").append("<div style=\"padding-bottom: 5rem;\" id=\"copy\">" + eintraege[i].anleser + "<a href=\"https://aufbau-website.de/craft/web/blog/" + eintraege[i].slug +"\"> Weiterlesen</a> </div>");
     //$("#div1").html("<img src=" + eintraege[i].bild + "> </img>");
 }
