--- a/craft_sicherungWebsite/templates/spenden/index.html
+++ b/craft_sicherungWebsite/templates/spenden/index.html
@@ -53,7 +53,7 @@
 
 
 
-  <div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }});">
+  <div class="container-fluid" style="background-image: url({{ entry.bild.one().url }});">
     {% set entry = craft.entries.section('spenden').slug('pate-werden').one() %}
     <div class="row">
       <div class="col-sm-1"> </div>
