--- a/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
+++ b/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
@@ -8,8 +8,10 @@
       if (counterMenu % 2 != 0) {
         $("#hamburgerMobile").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/hamburger.svg") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
         $("#logoMobile").show();
+        $("#menuSchrift").show();
       } else {
         $("#logoMobile").hide();
+        $("#menuSchrift").hide();
         $("#hamburgerMobile").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/schließen.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
       }
       counterMenu++;
@@ -206,7 +208,7 @@
   cursor: pointer;
 }
 .navbarMobilgeraet label {
-  display: block;
+  display: inline;
   z-index: 3;
   position: relative;
 }
@@ -216,7 +218,7 @@
   justify-content: space-between; /*Extrem wichtiges Flexbox-Design, mit dem man beide Items in der Leiste gleichmäßig verteilt anzeigt */
 }
 .navbarMobilgeraet #nav-icon { /*Hamburger-Menu-Icon */
-  padding: 0 1rem;
+  padding-left: .5rem;
   padding-right: 2.5rem;
 }
 .navbarMobilgeraet .nav ul,
@@ -265,15 +267,13 @@
   padding: 0 2rem;"
 }
 
-#gurkigerText {
-  position: absolute;
-  left: 82%;
-  top: 19%;
+#hamburgerMobile {
+  max-width: 40px;
+  max-height: 40px;
+  margin-top: .4rem;
+  padding-bottom: .65rem;"
 }
-@media all and (max-width: 820px){
-  #gurkigerText {
-    left: 70%;
-  }
+
 }
 
 
@@ -290,9 +290,9 @@
   </a>
 
   <input type="checkbox" id="menu"/> <!-- Hamburger Menu, das nach unten klappt -->
-  <!--<div id="gurkigerText">Menü </div> -->
-  <label for="menu" id="nav-icon"><img id="hamburgerMobile" style="max-width: 32px; max-height: 32px; margin-top: .4rem;" src=" {{ entry.bild3.one().url }} "> </label>
-
+  <div id="copy" style="padding-top: .5rem;"> <span id="menuSchrift">Menü</span>
+  <label for="menu" id="nav-icon"><img id="hamburgerMobile" src=" {{ entry.bild3.one().url }} "> </label>
+  </div>
 
   <div class="multi-level" style="width: 100vw; height: 100vh;">
 
@@ -304,7 +304,7 @@
     <div class="item" id="ersteBox" >
       <a href="https://aufbau-website.de/craft/web/ueberUns" style="display: inline; padding-right: 20%;" id="linkUeberUns" >ÜBER UNS</a>
       <input type="checkbox" id="A"/>
-      <label for="A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " id="pfeil1" class="arrow" style="float: right;">  </label>
+      <label for="A">   <img src=" {{ entry.bild.one().url }} " id="pfeil1" class="arrow" style="float: right;">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li id="ueberUnsSchrift" class="nichtklickbareUeberschriften"> ÜBER UNS</li> <hr>
@@ -326,7 +326,7 @@
     <div class="item" id="zweiteBox" >
       <a href="https://aufbau-Website.de/craft/web/projekte" id="linkProjekte" style="display: inline; padding-right: 20%;">PROJEKTE</a>
       <input type="checkbox" id="B"/>
-      <label for="B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil2" style="float: right;">  </label>
+      <label for="B">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil2" style="float: right;">  </label>
 
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul> <!-- Dropdown beginnt -->
@@ -337,7 +337,7 @@
           <div class="sub-item" id="subItemProjekte"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
             <a href="https://aufbau-Website.de/craft/web/projekte/programme.html" style="display: inline; padding-right: 20%;">Programme</a>
             <input type="checkbox" id="B-A"/>
-            <label for="B-A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene" </label>
+            <label for="B-A">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene" </label>
           </div>
         </li> <hr>
         <li> <a href="https://aufbau-Website.de/craft/web/projekte/themen.html"> Themen</a> </li> <hr>
@@ -349,7 +349,7 @@
 
     <div id="projekteProgramme" style="display: none;">
       <input type="checkbox" id="B-A1"/>
-      <label for="B-A1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " id="pfeil12" class="pfeilUnterebene">  </label>
+      <label for="B-A1">   <img src=" {{ entry.bild2.one().url }} " id="pfeil12" class="pfeilUnterebene">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li id="projekteProgramme"> Programme</li> <hr>
@@ -362,7 +362,7 @@
     <div class="item" id="dritteBox" >
       <a href="https://aufbau-Website.de/craft/web/spenden" id="linkSpenden" style="display: inline; padding-right: 20%;">SPENDEN</a>
       <input type="checkbox" id="C"/>
-      <label for="C" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil3" style="float: right;">  </label>
+      <label for="C">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil3" style="float: right;">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
 
       <ul> <!-- Dropdown beginnt -->
@@ -379,7 +379,7 @@
     <div class="item" id="vierteBox" >
       <a href="https://aufbau-website.de/craft/web/fuerSie" id="linkFuerSie" style="display: inline; padding-right: 20%;">FÜR SIE</a>
       <input type="checkbox" id="D"/>
-      <label for="D" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil4" style="float: right;">  </label>
+      <label for="D">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil4" style="float: right;">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
 
       <ul> <!-- Dropdown beginnt -->
@@ -389,7 +389,7 @@
           <div class="sub-item" id="subItemFreiwilligendienst"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
             <a href="https://aufbau-website.de/craft/web/fuerSie/freiwilligendienst.html" style="display: inline; padding-right: 20%;">Freiwilligendienst</a>
             <input type="checkbox" id="D-A"/>
-            <label for="D-A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
+            <label for="D-A">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
           </div>
         </li> <hr>
         <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/projektbesuch.html">Projektbesuch</a> </li> <hr>
@@ -397,7 +397,7 @@
           <div class="sub-item" id="subItemDaheim"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
             <a href="https://aufbau-website.de/craft/web/fuerSie/daheim.html" style="display: inline; padding-right: 20%;">Für Sie daheim</a>
             <input type="checkbox" id="D-B"/>
-            <label for="D-B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
+            <label for="D-B">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
           </div>
         </li> <hr>
         <li> <a href="https://aufbau-website.de/craft/web/fuerSie/presse">Presse und Downloads</a> </li> <hr>
@@ -410,7 +410,7 @@
 
     <div id="fuerSieFreiwilligendienst" style="display: none;">
       <input type="checkbox" id="D-A1"/>
-      <label for="D-A1" style="display: inline;">   <img src="https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png" class="pfeilUnterebene">  </label>
+      <label for="D-A1">   <img src="https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png" class="pfeilUnterebene">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li> Freiwilligendienst </li> <hr>
@@ -423,7 +423,7 @@
 
     <div id="fuerSieDaheim" style="display: none;">
       <input type="checkbox" id="D-B1"/>
-      <label for="D-B1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
+      <label for="D-B1">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li> Für Sie daheim </li> <hr>
