--- a/craft_sicherungWebsite/templates/index.html
+++ b/craft_sicherungWebsite/templates/index.html
@@ -61,9 +61,9 @@
 
 </div>
 
-<div class="container-fluid no-padding" style="background-color: #ffffff; height: 20rem; padding: 0;   display: flex; flex-direction: column; justify-content: center;">
+<div class="container-fluid no-padding" style="background-color: #ffffff; height: 20rem; padding: 0; display: flex; flex-direction: column; justify-content: center;">
 
-  <div class="container achterspaltenlayout text-center" style="padding: 0;">
+  <div class="container achterspaltenlayout text-center" style="padding-top: 0; padding-bottom: 0;">
     {% set entries = craft.entries.section('home').slug('zitate-home').one().children().all() %}
     {% set entry = random(entries) %}
 
@@ -106,7 +106,7 @@
       width: 40%;
       font-size: 12px;
       height: 35px;
-      margin-top: -35px;
+      margin-top: -61px;
       margin-left: 15px;
     }
     .card {
@@ -114,53 +114,17 @@
     }
   </style>
 
-  <div class="row">
+  {% include '_layouts/codeschnipsel/ajaxStartseite' %}
 
-    {% set entries = craft.entries.section('projektberichte').all() %}
-    {% set entry = random(entries) %}
-    <div class="col-md-4">
-    <div class="card border-light h-100">
-      <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
-      <button class="btn btn-primary reiter" role="button">Projektbericht</button>
-      <div class="card-body">
-          <h3>{{ entry.title }}</h3>
-          <div id="copy"> {{ entry.anleser }} </div>
-      </div>
-    </div>
-  </div>
-
-
-    {% set entry = random(entries) %}
-    <div class="col-md-4">
-    <div class="card border-light h-100">
-      <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
-      <button class="btn btn-primary reiter" role="button">Projektbericht</button>
-      <div class="card-body">
-          <h3>{{ entry.title }}</h3>
-          <div id="copy"> {{ entry.anleser }} </div>
-      </div>
-    </div>
-  </div>
-
-  {% set entries = craft.entries.section('blog').level('1').all() %}
-    {% set entry = random(entries) %}
-    <div class="col-md-4">
-    <div class="card border-light h-100">
-      <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
-      <button class="btn btn-primary reiter" role="button">Blogeintrag</button>
-      <div class="card-body">
-          <h3>{{ entry.title }}</h3>
-          <div id="copy"> {{ entry.anleser }} </div>
-      </div>
-    </div>
-  </div>
+  <div class="row" id="vorschau">
 
   </div> <!-- Zufällige Blogeinträge oder Projektberichte - row-Ende -->
 
   <div class="text-center" style="padding-top: 4rem;">
-  <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">mehr laden</a>
+    <button id="Laden" type="button" class="btn btn-primary mx-auto d-block" onclick="mehrLadenAjax()"> Weitere Beiträge laden</button>
   </div>
 </div>
+
 
 <div class="container-fluid no-padding" style="background-color: #ffffff;">
 
@@ -220,7 +184,7 @@
       <div class="col-lg-7 col-md-7" style="padding-left: 2rem; padding-right: 2rem;">
         <h4 style="color: white;"> {{ entry.title }} </h4>
         <div id="copy" style="color: white;"> {{ entry.text }}</div>
-        <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+        <a href="https://aufbau-website.de/craft/web/spenden/jetztspenden.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
       </div>
     </div>
   </div> <!-- Der orange Berg mit dem Spendenaufruf -->
