--- a/craft_sicherungWebsite/web/CSSundJS/stylevorgaben2.css
+++ b/craft_sicherungWebsite/web/CSSundJS/stylevorgaben2.css
@@ -202,7 +202,11 @@ h4 {
   position: relative;
 }
 
-@media all and (max-width: 1100px) and (min-width: 700px) {
+/*Tablets: */
+@media all and (max-width: 1200px) and (min-width: 768px) {
+  html {
+    font-size: 80%;
+}
   #video { /* Video-Box ausblenden */
     display: none;
   }
@@ -210,27 +214,36 @@ h4 {
     display: none;
   }
   h1 {
-    font-size: 41px;
-    line-height: 48px;
+    font-size: 80%;
+    line-height: 80%;
   }
   h2 {
-    font-size: 32px;
-    line-height: 36px;
+    font-size: 80%;
+    line-height: 80%;
+  }
+  h3 {
+    font-size: 85%;
+    line-height: 85%;
+  }
+  h4 {
+    font-size: 90%;
+    line-height: 90%;
   }
   #anleser {
-    font-size: 21px;
-    line-height: 31px;
+    font-size: 90%;
+    line-height: 90%;
   }
   #copy {
-    font-size: 16px;
-    line-height: 25px;
+    font-size: 90%;
+    line-height: 90%;
   }
   .btn-primary {
-    font-size: 16px;
-    line-height: 25px;
+    font-size: 90%;
+    line-height: 90%;
   }
 }
-@media all and (max-width: 700px) {
+
+@media all and (max-width: 768px) {
   #video { /* Video-Box ausblenden */
     display: none;
   }
